# rust-clitool-template

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cargo-generate.toml  justfile
.cargo/: config.toml
src/: args.rs  error.rs  lib.rs  main.rs
