[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{author}}"]
license = "MIT OR Apache-2.0"

[lints.rust]
#### CONFIGURE clippy LINT GROUPS AT LOWER PRIORITY TO ALLOW INDIVIDUAL LINTS OVERRIDES (AT DEFAULT priority 0)
rust_2018_idioms = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = 1 }
nonstandard_style = { level = "warn", priority = 1 }
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
#######################################################

[lints.clippy]
#### CONFIGURE clippy LINT GROUPS AT LOWER PRIORITY TO ALLOW INDIVIDUAL LINTS OVERRIDES (AT DEFAULT priority 0)
# pedantic:       Enables “pedantic” lint group
# level = "warn”: Sets all pedantic lints to emit warnings (not errors) when triggered.
# priority = -1:  Gives this configuration lower priority than other lint configurations => individual lint settings (like the ones listed above or below) can override
#                the pedantic group’s default behavior
pedantic = { level = "warn", priority = -1 }
#nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
#######################################################

cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
unused_async = "warn"
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
expect_used = "warn"
clone_on_ref_ptr = "warn"

# Other restriction lints
arithmetic_side_effects = "allow"
as_underscore = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn"               # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"             # maybe? alternative is fallible.
impl_trait_in_params = "allow"
integer_division = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
implicit_clone = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
serde_api_misuse = "deny"

###### Taken from https://emschwartz.me/your-clippy-config-should-be-stricter/ ######
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"              # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
#allow_attributes = "warn"
#allow_attributes_without_reason = "warn"

[dependencies]

clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["macros", "net", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
humantime = "2.3.0"
humantime-serde = "1.1"

{% if include_build_script %}
[build-dependencies]
built = { version = "0.8", features = ["chrono", "git2"] }
# chrono = { version = "0.4", default-features = false, features = [ "clock", "std", ] }
{% endif %}
